# geometry-predicates-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  predicates.c  predicates.rs  transpiled.rs
src/transpiled/: c2rust.rs
