[package]
name = "geometry-predicates"
version = "0.3.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT"
description = "A Rust port of robust geometric predicates"

homepage = "https://github.com/elrnv/geometry-predicates-rs"
repository = "https://github.com/elrnv/geometry-predicates-rs"
readme = "README.md"

keywords = ["geometry", "predicate", "robust", "exact", "arithmetic"]

categories = ["algorithms"]

[badges]
travis-ci = { repository = "elrnv/geometry-predicates-rs", branch = "master" }

[features]
unstable = []
transpiled = []

[dependencies]

[dev-dependencies]
rand = "0.3"
